# GeminiMCPs

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .pydocstyle.ini  ACTION_REGISTRY.md  AGENT_WORKFLOW.md  AI_INTEGRATION_ANALYSIS.md  AUTONOMOUS_ACTION_REGISTRY.md  CES v1.2 feedbacks.md  CES_Development_Companion.md  Dockerfile  Dockerfile.benchmark  ENHANCED_ACTION_REGISTRY.md  GEMINI.md  GEMINI_CLI_DEBUGGING_GUIDE.md  MODULARIZATION_PLAN.md  Project overview by gemini 2.5 pro.txt  QWEN.md  README.md  WORKSPACE_PLAN.md  WORKSPACE_STRUCTURE.md  analyze_performance.py  analyze_self.py  auto_document_tests.py  beta_launch_results.json  beta_program_status.json  ces_exploration_final_summary.md  ces_memory.db  ces_performance_report.md  ces_performance_test_20250901_232604.json  ces_performance_test_20250901_232604_report.txt  cognitive_enhancement_system_master_plan.md  current_file_structure.txt  detailed_analysis.py  docker-compose.benchmark.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  gemini.md  (+28 more)
archive/: AGENT_WORKFLOW.md  AGENT_WORKFLOW_ENHANCED.md  Hola Gemini necesito tu.txt  analyze_self.py  analyze_self_v2.py  debug_multiline_strings.py  hi qwen i want you to.txt  improvement_plan.md
audit_results/: analyze_codebase_improvements.json  count_lines_of_code.json  find_duplicate_code.json  get_dependencies_overview.json  list_undocumented_functions.json
benchmark_results/: baseline_results.json  benchmark_report_1756282202.json  benchmark_summary_1756282202.txt  bursty_results.json  parameterized_benchmark_default_1756623261.json  phase1_validation_results.json  phase1_validation_summary.txt
ces/: __init__.py  codesage_integration.py
codesage_mcp/: README.md  __init__.py  adaptive_cache_manager.py  advanced_analysis.py  auto_performance_tuner.py  cache.py  cache_analysis.py  chunking.py  config.py  (+24 more)
codesage_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+326 files in other folders)
