[project]
name = "codesage-mcp"
version = "0.1.0"
description = "CodeSage Model Context Protocol (MCP) Server with CES Integration"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "groq",
    "openai",
    "google-generativeai",
    "sentence-transformers",
    "faiss-cpu",
    "python-multipart", # For file uploads in FastAPI
    "radon", # For cyclomatic complexity analysis
    "stdlib-list", # For standard library module detection
    # CES-specific dependencies
    "click", # For CLI interface
    "rich", # For enhanced terminal output
    "pyyaml", # For configuration files
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "black",
    "mypy",
    "pre-commit",
],
ces = [
    "codesage-mcp", # CES depends on CodeSage
],

[tool.setuptools.packages.find]
where = ["."]
include = ["codesage_mcp*", "ces*"]
namespaces = false

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable the default set of rules.
select = ["E", "F"]
ignore = ["E501"]
